v3.00 final - Not yet released

- ADDED: "Sample datasets" menu for automatically downloading sample data
- ADDED: Much more robust XML-based program states

- FIXED: Subsampling image scaling bugs (relating to improper domain sets)
- FIXED: Bug in image sequence capture when no file extension is given


v3.00 beta5 - Tuesday, April 26, 2005

- ADDED: Data export: save a data object to a file series on disk
- ADDED: Ability to download images from an OME database (OME image transform)
- ADDED: Dragging selected overlays with the pointer tool moves them
- ADDED: Support for key/value pair command-line parameters
- ADDED: Ability to launch VisBio through a web browser with Java Web Start
- ADDED: Support for PNG images
- ADDED: All online help topics are written

- TWEAK: VisBio icon is now used instead of default Java cup icon
- TWEAK: System property for controlling native frame decoration (for L&Fs)
- TWEAK: Only one VisBio instance allowed to run at a time
- TWEAK: Secondary instances pass parameters to active instance before quitting
- TWEAK: Remove OME-CA XML state logic completely

- FIXED: Several overlay bugs eliminated
- FIXED: More robust behavior when Java3D is not installed
- FIXED: More descriptive error messages if VisBio fails to start up
- FIXED: Combo box width for Windows Look & Feel
- FIXED: Lots of little bugfixes


v3.00 beta4 - Wednesday, March 16, 2005

- ADDED: Volume rendering
- ADDED: Arbitrary slice data transform
- ADDED: Data cache system for managing full-resolution data in memory
- ADDED: Expanded VisBio help system
- ADDED: Pressing arrow keys on a display cycles through dimensional positions
- ADDED: Ctrl + arrow keys on a display causes it to pan
- ADDED: Shift + up/down arrow keys on a display zooms in and out
- ADDED: Shift + left/right arrow keys on a display rotates around Z axis
- ADDED: Shift + ctrl + arrow keys on a 3D display rotates around X and Y axes
- ADDED: Typing characters on a display affects selected text overlays